kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: imagecloud
  labels:
    name: imagecloud
